fix alignment of pipeline

--- a/src/_resources/scss/layout/home_pipeline.scss
+++ b/src/_resources/scss/layout/home_pipeline.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     @media screen and (min-width: $medium-screen) {
       flex-direction: row;
-      align-items: center;
+      justify-content: center;
     }
   }
   .section-title,
